# vooox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
backlog/: config.yml
backlog/tasks/: task-1 - Wayland-text-injection-via-ydotool.md  task-11 - Einmal-das-ganze-project-durchgehen-und-nach-clean-code-und-clean-architecture-refactorn..md  task-12 - Wenn-jemand-anderes-diese-App-bei-sich-installieren-wollen-würde.-Was-für-voraussetzungen-müsste-er-haben-Kannst-du-das-in-einem-Dokument-hinterlegen.md  task-13 - 2-Modi.md  task-14 - lila.md  task-15 - wie-fügst-du-ein.md  task-16 - Einstellungen-aktivieren-die-Mikros-deaktivieren-sie-aber-nicht-mehr..md  task-17 - In-Einstellungen-Rubriken-sollen-so-sortiert-sein-Allgemein-Mikrophon-whisper-tastenkürzel.md  task-18 - Migrate-ComboBoxText-to-DropDownStringList.md  task-2 - Segment-by-segment-text-injection-while-whisper-streams.md  task-3 - Wayland-overlay-positioning-via-gtk4-layer-shell.md  task-4 - Wayland-global-shortcut-capture.md  task-5 - Custom-tray-and-overlay-icons.md  task-6 - Rust-integration-tests-in-tests-integration.md  (+3 more)
packaging/: AppRun  build_appimage.sh  vooox.desktop
src/: audio.rs  config.rs  dictation_panel.rs  gpu.rs  history.rs  history_window.rs  main.rs  overlay.rs  paths.rs  settings.rs  setup_window.rs  shortcuts.rs  sidecar.rs  text_inject.rs  tray.rs  whisper_client.rs  whisper_models.rs  window_state.rs  x11_window.rs
src/audio/: devices.rs  level_meter.rs  mod.rs  recorder.rs  wav.rs
src/storage/: mod.rs  (+4 more)
tests/: gen_fixtures.py
whisper_server/: requirements.txt  server.py
(+23 files in other folders)
