[package]
name = "vooox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vooox"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_14"] }
cpal = "0.17"
rdev = "0.5"
enigo = "0.6"
ksni = { version = "0.3", features = ["blocking", "tokio"] }
glib = "0.22"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.29"
futures-util = "0.3"
hound = "3.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
base64 = "0.22"
crossbeam-channel = "0.5"
libc = "0.2"
gdk4-x11 = "0.11"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
